# shop-scraper-archive

./: Cargo.toml  README.markdown
migrations/2023-06-22-141251_create_products/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: cheapest_product.rs  get_cheapest_product.rs  mod.rs
src/cheapest_product/: mod.rs
src/data/: mod.rs
src/db/: mod.rs
src/scrapers/: mod.rs
src/scrapers/blibli/: mod.rs
src/scrapers/bukalapak/: mod.rs
src/scrapers/tokopedia/: mod.rs
src/scraping/: mod.rs
src/scraping/blibli/: mod.rs
src/scraping/bukalapak/: mod.rs
src/scraping/tokopedia/: mod.rs
